# internal/api/oas/oas_operations_gen.go
@@ -10,7 +10,6 @@ const (
 	AddDocumentOperation              OperationName = "AddDocument"
 	AddModelOperation                 OperationName = "AddModel"
 	ChangePasswordOperation           OperationName = "ChangePassword"
-	ChatStreamOperation               OperationName = "ChatStream"
 	CompileGraphOperation             OperationName = "CompileGraph"
 	ConfigureProviderOperation        OperationName = "ConfigureProvider"
 	CreateAgentOperation              OperationName = "CreateAgent"
@@ -51,7 +50,6 @@ const (
 	GetSessionOperation               OperationName = "GetSession"
 	GetStatsOperation                 OperationName = "GetStats"
 	GetWorkflowRunOperation           OperationName = "GetWorkflowRun"
-	GetWorkflowRunEventsOperation     OperationName = "GetWorkflowRunEvents"
 	HealthCheckOperation              OperationName = "HealthCheck"
 	ImportAgentOperation              OperationName = "ImportAgent"
 	InstallSkillOperation             OperationName = "InstallSkill"
@@ -76,10 +74,11 @@ const (
 	QueryDocumentsOperation           OperationName = "QueryDocuments"
 	ReloadPluginsOperation            OperationName = "ReloadPlugins"
 	ReprocessDocumentOperation        OperationName = "ReprocessDocument"
-	ResumeStreamOperation             OperationName = "ResumeStream"
 	RollbackVersionOperation          OperationName = "RollbackVersion"
 	SetDefaultModelOperation          OperationName = "SetDefaultModel"
 	SetupAuthOperation                OperationName = "SetupAuth"
+	StartConversationRunOperation     OperationName = "StartConversationRun"
+	SubmitApprovalOperation           OperationName = "SubmitApproval"
 	UpdateAgentOperation              OperationName = "UpdateAgent"
 	UpdateAllSkillsOperation          OperationName = "UpdateAllSkills"
 	UpdateMemoryOperation             OperationName = "UpdateMemory"
